# Kryptika

./: .gitignore  LICENSE  README.md  dashboard.py  pyproject.toml  run_node.py  wallet_cli.py
.github/workflows/: main.yml
kryptika/: __init__.py  main.py
kryptika/core/: __init__.py  block.py  blockchain.py  transaction.py
kryptika/network/: __init__.py  node.py  server.py
kryptika/storage/: __init__.py  storage.py
tests/: test_core.py  test_network.py  test_storage.py
